--- a/style.css
+++ b/style.css
@@ -17,34 +17,22 @@
     box-sizing: border-box;
 }
 
-
 body {
-    background: rgb(2, 70, 107);
     background: linear-gradient(0deg, #033a5848 0%, #05334d9a 10%, rgba(29, 25, 30, 1) 90%), url(img/bk2.png) no-repeat;
     background-position: bottom;
-
-
-    /*background: rgb(2, 70, 107);
-    background: linear-gradient(0deg, #033a58 0%, #05334d 5%, rgba(29, 25, 30, 1) 80%);
-    linear-gradient(0deg, rgba(2,173,231,0.5), rgba(2,173,231,0.5)), url(img/bk2.png) no-repeat;*/
 }
 
 
 .container-grid {
     width: 80vw;
     max-width: 1400px;
-
     margin: 0 auto;
 }
 
 .banner {
     height: 100vh;
-
     background: url(img/escritorio.png);
-
-    background-color: 100%;
     background-repeat: no-repeat;
-
     background-position: 10%;
     background-size: cover;
 }
@@ -62,7 +50,6 @@ header {
     position: fixed;
     top: 0;
     width: 100%;
-
     z-index: 1;
 }
 
@@ -82,7 +69,6 @@ header button {
 
 .menu {
     width: 680px;
-
     display: flex;
     justify-content: space-between;
 }
@@ -95,7 +81,6 @@ header button {
 
 .menu a {
     color: white;
-
     font-family: 'Gameplay';
     font-size: 18px;
 
@@ -117,12 +102,9 @@ header button {
     background-color: #058CD7;
 }
 
-
-
 .conteudo-banner a {
     color: white;
     text-decoration: none;
-
     font-weight: 50;
     word-spacing: 2px;
 }
@@ -140,7 +122,6 @@ header button {
     display: flex;
     flex-direction: column;
     justify-content: center;
-
     font-weight: 500;
 }
 
@@ -191,8 +172,6 @@ header button {
     right: -20px;
     transition: 0.5s;
 }
-
-
 .conteudo-banner button:hover {
     background-color: #012437c3;
 }
@@ -200,13 +179,10 @@ header button {
 .conteudo-banner button:hover span {
     padding-right: 25px;
 }
-
 .conteudo-banner button:hover span:after {
     opacity: 1;
     right: 0;
 }
-
-
 
 .quadrado-azul button {
     background-color: #058CD7;
@@ -275,7 +251,6 @@ header button {
     color: white;
     font-family: 'Press Start 2P';
     font-size: 15px;
-
     border-style: none;
 }
 
@@ -283,13 +258,11 @@ header button {
     height: 800px;
     margin-bottom: 80px;
 
-
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
 
     gap: 50px;
-
 
     text-align: center;
     padding: 100px 11%;
@@ -319,7 +292,6 @@ header button {
     text-align: right;
 }
 
-
 #sobre h2 {
     margin-bottom: 20px;
 }
@@ -332,7 +304,6 @@ h2 {
 
     font-weight: 500;
 }
-
 
 .container {
     position: relative;
@@ -383,7 +354,6 @@ h2 {
 }
 
 .overlay p {
-
     line-height: 1.1;
     text-indent: 35px;
     font-size: 14px;
@@ -396,7 +366,6 @@ h2 {
 
 #cases {
     text-align: center;
-
     padding-bottom: 80px;
     margin-bottom: 40px;
 }
@@ -408,13 +377,11 @@ h2 {
 
 .container-cards {
     width: 100%;
-
     display: flex;
     justify-content: space-between;
 }
 
-
-.chamada {
+.chamada, .chamada-dois {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -423,7 +390,7 @@ h2 {
     padding: 20px;
 }
 
-.chamada h3 {
+.chamada h3, .chamada-dois h3 {
     text-decoration-thickness: bold;
     padding-bottom: 10px;
 
@@ -434,18 +401,15 @@ h2 {
     font-weight: 500;
 }
 
-.chamada p {
+.chamada-dois p {
     font-family: 'Gameplay';
     font-size: 20px;
     color: #058CD7;
-
 }
 
 #contato {
     text-align: center;
-
     padding: 60px;
-
     margin-bottom: 80px;
 }
 
@@ -453,7 +417,6 @@ h2 {
     border-bottom: 4px solid #FFFCF7;
     width: 100%;
     padding-bottom: 20px;
-
     margin-bottom: 50px;
 }
 
@@ -481,14 +444,12 @@ h2 {
 
 #contato form {
     backdrop-filter: blur(1px);
-
     background-color: #1d191ec9;
 
     width: 40%;
 
     margin: 0 auto;
     padding: 40px 0;
-
 
     display: flex;
     justify-content: end;
@@ -503,12 +464,10 @@ h2 {
 
 .campo {
     width: 80%;
-
     margin-bottom: 20px;
 
     display: flex;
     justify-content: flex-end;
-
     justify-content: space-between;
 }
 
@@ -533,10 +492,9 @@ h2 {
 .campo-textarea {
     width: 80%;
     margin-bottom: 25px;
+
     text-align: left;
-
     justify-content: flex-end;
-
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -578,12 +536,10 @@ h2 {
     color: #FFFCF7;
     background-color: var(--laranja);
 
-
     border: none;
     border-radius: 20px;
 
     cursor: pointer;
-
     transition: background-color 500ms ease;
 }
 
@@ -596,21 +552,14 @@ h2 {
     color: #969292;
 }
 
-
-
-
 footer {
     height: 180px;
     background-color: #1d191ed3;
 }
 
-
 footer .container-grid {
     height: 100%;
-
     display: flex;
-
-
     justify-content: end;
     align-items: center;
 }
@@ -630,7 +579,6 @@ footer .container-grid {
     font-size: 20px;
 }
 
-
 .icones-redes {
     display: flex;
     align-items: center;
@@ -643,12 +591,9 @@ footer .container-grid {
     height: 50px;
 }
 
-
-
 .chamada a:hover {
     background-color: var(--azul);
 }
-
 
 .chamada a {
     background-color: var(--laranja);
@@ -663,13 +608,10 @@ footer .container-grid {
 
     font-family: 'Gameplay';
     font-size: 18px;
-
     text-decoration: none;
-
     text-align: center;
     padding: 10px;
 }
-
 
 @media screen and (max-width: 1400px) {
     .overlay h3 {
@@ -773,7 +715,7 @@ footer .container-grid {
         width: 90%;
     }
 
-    .chamada {
+    .chamada, .chamada-dois {
         padding: 50px;
     }
 
@@ -893,21 +835,22 @@ footer .container-grid {
         width: 125px;
     }
 
-    .chamada h3 {
+    .chamada h3, .chamada-dois h3 {
         font-size: 20px;
         font-weight: 80;
     }
-
-
 
     .container {
         height: 420px;
     }
 }
 
-
-
-
+@media screen and (max-width: 1070px) {
+    .container-cards {
+        justify-content: center;
+    }
+    
+}
 
 @media screen and (max-width: 1080px) {
     footer {
@@ -944,14 +887,82 @@ footer .container-grid {
     }
 }
 
-@media screen and (max-width: 930px) {
+@media screen and (max-width: 940px) {
     .container {
         height: 444px;
     }
-
 }
 
-@media screen and (max-width:900px) {
+@media screen and (max-width: 910px) {
+    #sobre p {
+        width: 90%;
+        margin: 0 auto;
+        margin-bottom: 20px;
+    }
+
+    .container-grid {
+        width: 90%;
+    }
+    
+    .container-sobre-um {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .container-sobre {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    #sobre h2 {
+        font-size: 20px;
+    }
+
+    #sobre .p-laranja {
+        padding: 16px 0px 0px 0px;
+        border-top: none;
+        text-align: justify;
+    }
+
+    #sobre p {
+        text-align: justify;
+        padding: 16px 0px 0px 0px;
+        font-size: 14px;
+        border-top: none;
+        margin: 0px;
+    } 
+}
+
+@media screen and (max-width:920px) {
+    #sobre {
+        background-color: #1D191E;
+    }  
+
+    #sobre button {
+        font-size: 14px;
+        width: 130px;
+        height: 20px;
+    }
+
+    #sobre {
+        height: unset;
+        margin: 0;
+        padding: 100px 36px;
+    }
+
+    #sobre h2 {
+        margin-bottom: 50px;
+    }
+
+    #sobre p {
+        margin-bottom: 30px;
+        font-size: 16px;
+        line-height: 1.6;
+    }
+
+    .chamada {
+        background-color: #1D191E;
+    }
     .overlay p {
         font-size: 14px;
         letter-spacing: 1px;
@@ -965,20 +976,18 @@ footer .container-grid {
     .overlay {
         position: absolute;
         left: 100%;
-        bottom: 14%;
+        bottom: 12%;
 
         width: 90%;
         height: 95%;
         line-height: 1.2;
 
         background: rgb(0, 0, 0);
-        background: rgba(0, 0, 0, 0.4);
-
+        background: rgba(0, 0, 0, 0.7);
 
         animation: CSSscrollReveal ease-in-out both;
         animation-timeline: view();
-        animation-range: entry 60% cover 60%;
-
+        animation-range: entry 60% cover 56%;
     }
 
     @keyframes CSSscrollReveal {
@@ -996,7 +1005,6 @@ footer .container-grid {
     .container-cards {
         align-items: flex-start;
         flex-direction: column;
-
     }
 
     .container {
@@ -1010,112 +1018,34 @@ footer .container-grid {
     #contato form {
         width: 70%;
     }
-
-    #sobre p {
-        font-size: 16px;
-        line-height: 1.6;
-    }
-
-    #sobre {
-        padding: 100px 36px;
-    }
-
-    #sobre button {
-        font-size: 14px;
-        width: 130px;
-        height: 20px;
-    }
-
-    
-    
 }
 
 @media screen and (max-width: 800px) {
     .card {
         flex-basis: 45%;
     }
+}
 
-    .redes-sociais p {
-        font-size: 16px;
-    }
+@media screen and (max-width: 830px) {
+    #contato form {
+        width: 80%;
+    } 
 }
 
 @media screen and (max-width: 700px) {
-    #sobre {
-        height: unset;
-        margin-bottom: 40px;
-    }
-
-    #sobre h2 {
-        margin-bottom: 50px;
-    }
-
-    #sobre p {
-        margin-bottom: 30px;
-    }
-
     #cases,
     #contato {
         margin-bottom: unset;
     }
 
-    #portfolio a {
-        width: 100%;
-        text-align: center;
-    }
-
-    .campo,
-    .campo-textarea,
-    #contato form button {
-        width: 75%;
+    #contato form {
+        width: 90%;
     }
 }
 
-@media screen and (max-width: 500px) {
-    .container-grid {
-        width: 90%;
-    }
-
-    header img {
-        width: 200px;
-    }
-
-    .banner {
-        background-size: cover;
-    }
-
-    .conteudo-banner p {
-        font-size: 24px;
-    }
-
-    nav.menu {
-        width: 100%;
-
-        display: none;
-    }
-
-    #sobre {
-        padding-left: 0px;
-        padding-right: 0px;
-    }
-
-    #sobre p {
-        width: 90%;
-        margin: 0 auto;
-        margin-bottom: 20px;
-    }
-
-    #cases {
-        width: 100%;
-        margin: unset;
-    }
-
+@media screen and (max-width: 650px) {
     .container-cards {
-        flex-wrap: nowrap;
-
-        gap: 40px;
-
-        overflow: auto;
+        margin: 40px 40px;
     }
 
     .card {
@@ -1125,11 +1055,45 @@ footer .container-grid {
         flex-basis: unset;
     }
 
+    .overlay {
+        animation: none;
 
-    #portfolio {
-        margin-bottom: 0;
+        width: 240px;
+        height: 360px;
+
+        opacity: 1;
+        bottom: 40px;
+        left: 240px;
     }
 
+    .overlay p {
+        font-size: 10px;
+        letter-spacing: 1px;
+        line-height: 1.2;
+    }
+
+    .overlay h3 {
+        font-size: 12px;
+    }
+
+    .container-grid {
+        width: 100%;
+    }
+
+    .container {
+        padding-bottom: 50px;
+    }
+
+    .container img {
+        width: 70%;
+    } 
+
+    #contato form {
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 600px) {
     #contato {
         padding-top: 70px;
         color: white;
@@ -1144,50 +1108,70 @@ footer .container-grid {
         border-radius: 0;
     }
 
-    footer .redes-sociais p {
-        font-size: 16px;
-    }
-
-}
-
-@media screen and (max-width: 400px) {
-    header img {
-        width: 160px;
-    }
-
-    header svg {
-        width: 40px;
-    }
-
-    .conteudo-banner p {
-        font-size: 20px;
-    }
-
-    footer img {
+    #contato form button {
         width: 200px;
-    }
-
-}
-
-@media screen and (max-width: 320px) {
-    #contato form {
-        width: 100%;
     }
 
     #contato {
         padding: 0px;
+    } 
+}
+
+@media screen and (max-width: 500px) {
+    .container-cards {
+        flex-wrap: nowrap;
+        overflow: auto;
     }
 
-    .container img {
-        width: 60%;
+    header img {
+        width: 200px;
     }
 
+    .conteudo-banner p {
+        font-size: 24px;
+    }
+
+    nav.menu {
+        width: 100%;
+
+        display: none;
+    }
+
+    #cases {
+        width: 100%;
+        margin: unset;
+    }  
+
+    footer .redes-sociais p {
+        font-size: 16px;
+    }
+
+    #cases h2 {
+        font-size: 20px;
+    }
+}
+
+@media screen and (max-width: 450px) {
     header img {
         width: 40%;
     }
 
     header svg {
-        width: 18%;
+        width: 24%;
+    }
+
+    header {
+        height: 100px;
+    }
+}
+
+@media screen and (max-width: 390px) {
+    header img {
+        width: 50%;
+    }
+
+    header svg {
+        width: 25%;
     }
 
     header {
@@ -1195,80 +1179,37 @@ footer .container-grid {
     }
 
     .banner h1 {
-        font-size: 13px;
-    }
-
-    .banner a {
-        letter-spacing: 1px;
+        letter-spacing: 0.2px;
+        font-weight: 1;
         font-size: 15px;
     }
+}
 
-    .banner button {
-        width: 78px;
-        height: 30px;
+@media screen and (max-width: 350px) {
+    header {
+        height: 80px;
     }
 
-    #sobre h2 {
-        font-size: 20px;
+    .banner h1 {
+        letter-spacing: 0.2px;
+        font-weight: 1;
+        font-size: 14px;
     }
 
-    #cases h2 {
-        font-size: 20px;
+    .chamada, .chamada-dois {
+        padding: 20px 14px 50px 14px;
     }
 
-
-
-    .overlay p {
-        font-size: 10px;
-        letter-spacing: 1px;
-        line-height: 1.2;
+    .chamada-dois p {
+        font-size: 14px;
     }
 
-    .overlay h3 {
-        font-size: 12px;
+    .chamada a {
+        width: 250px;
+        font-size: 16px;
     }
 
-    .overlay {
-        position: absolute;
-        left: 0;
-        bottom: 20%;
-
-        width: 60%;
-        height: 60%;
-        line-height: 1.2;
-
-        background: rgb(0, 0, 0);
-        background: rgba(0, 0, 0, 0.4);
-
-
-        animation: CSSscrollReveal ease-in-out both;
-        animation-timeline: view();
-        animation-range: entry 20% cover 20%;
-
+    .chamada h3, .chamada-dois h3 {
+        font-size: 16px;
     }
-
-    @keyframes CSSscrollReveal {
-        from {
-            opacity: 0;
-            transform: translateY(160px);
-        }
-
-        to {
-            opacity: 1;
-            transform: translateY(0);
-        }
-    }
-
-    .container-cards {
-        align-items: center;
-        flex-direction: column;
-
-    }
-
-    .container {
-        padding-bottom: 50px;
-    }
-
-
-
 }
